cmake_minimum_required(VERSION 2.8)


project(gaussianprocessregression)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

FIND_PACKAGE( Boost COMPONENTS system filesystem REQUIRED)
FIND_PACKAGE( Eigen3 REQUIRED )

FIND_PACKAGE( LAPACK )
if(NOT LAPACK_FOUND)
	unset(LAPACK_LIBRARIES CACHE)
	ADD_DEFINITIONS(-DNO_LAPACK_FLAG)
endif()

INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS}
	${EIGEN3_INCLUDE_DIR}
	include
)

LINK_DIRECTORIES( ${Boost_LIBRARY_DIRS} )

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(apps)

INCLUDE(CPack)
