SET(gp_lib_src
	MatrixIO.cpp
	GaussianProcess.cpp	
)
ADD_LIBRARY(gplib SHARED ${gp_lib_src})

TARGET_LINK_LIBRARIES(gplib ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${LAPACK_LIBRARIES})

SET_TARGET_PROPERTIES( gplib
	PROPERTIES
	VERSION 0.0.1
	SOVERSION 0.0.1)

INSTALL(TARGETS
	gplib
DESTINATION
	lib
PERMISSIONS
	OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)
